FEATURE: Add API Scope for latest posts (#21913)
Adds api scopes for

- `/posts.json`
- `/posts.rss`
- `/private-posts.json`
- `/private-posts.rss`

--- a/config/locales/client.en.yml
+++ b/config/locales/client.en.yml
@@ -4778,6 +4778,7 @@ en:
             posts:
               edit: Edit any post or a specific one.
               delete: Delete a post.
+              list: List latest posts and private posts. RSS is also supported.
             tags:
               list: List tags.
             categories:
