FEATURE: Offline indicator (#21369)

--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -2343,6 +2343,7 @@ en:
     default_text_size: "Text size which is selected by default"
 
     default_title_count_mode: "Default mode for the page title counter"
+    enable_offline_indicator: "Display a message to users when it is detected that they have no network connection"
 
     retain_web_hook_events_period_days: "Number of days to retain web hook event records."
     retry_web_hook_events: "Automatically retry failed web hook events for 4 times. Time gaps between the retries are 1, 5, 25 and 125 minutes."
